<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:layout_goneMarginRight="@dimen/size2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size8">

       <TextView
            android:id="@+id/article_section_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/size2"
            android:gravity="center"
            android:text="@string/article_section_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/myBlue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_section_name"
            android:elevation="@dimen/size2"
            android:gravity="center"
            android:text="@string/article_title"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/myBlue"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/article_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_title"
            android:elevation="@dimen/size2"
            android:gravity="center"
            android:text="@string/article_author_name"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/myBlue"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/article_pubdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_author_name"
            android:elevation="@dimen/size2"
            android:gravity="center"
            android:text="@string/article_pubdate"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/myBlue"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/article_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_pubdate"
            android:elevation="@dimen/size2"
            android:gravity="center"
            android:text="@string/article_url"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/myBlue"
            android:textStyle="italic" />

    </RelativeLayout>

</android.support.v7.widget.CardView>


